perf(chatroom): 채팅방 조회 및 MongoDB 처리 성능 최적화
- 쿼리 최적화
  - 두 단계 쿼리 패턴 도입으로 fetch join 관련 SemanticException 해결
  - findChatRoomsByUserIdAndRole 및 findChatRoomsWithParticipantsAndUsers 메서드 리팩토링
  - 채팅방 ID 우선 조회 → 관련 데이터 일괄 로딩 방식으로 개선

- MongoDB 관련 최적화
  - getUnreadCountMap 메서드 개선으로 불필요한 데이터 처리 감소
  - getChatRoomData 통합 메서드 추가로 MongoDB 쿼리 횟수 3회 → 1회로 감소